# fable

./: .gitignore  CLAUDE.md  README.md  loomweave.yaml  pyproject.toml  weft.toml
.agents/skills/loomweave-workflow/: .fingerprint  SKILL.md
.agents/skills/warpline-workflow/: SKILL.md
.agents/skills/warpline-workflow/examples/: changed-to-reverify.json
.claude/: settings.json
.claude/skills/warpline-workflow/references/: contract.md  degrade-and-federation.md  tools.md
docs/: text1.md  text2.md
docs/design/: hld.md
docs/design/reviews/: 2026-06-29-determinism-review.md  2026-06-29-solution-design-review.md
docs/product/: current-state.md  initial-assessment.md  metrics.md  roadmap.md  vision.md
docs/product/decisions/: 0001-bootstrap-from-observed-state.md  0002-authority-grant-confirmed.md  0003-scope-extension-and-resources.md  0004-public-remote-release.md  0005-deterministic-rule-based-gm.md  0006-reproducibility-architecture.md  0007-experimental-apparatus-first-class.md  0008-measurement-defensibility.md  0009-cost-and-power-scope-escalation.md
src/fable/: __init__.py  audit.py
src/fable/schemas/: __init__.py  action.py  base.py  world.py
tests/: test_audit.py  test_schemas.py
